# Py2Gb

./: .gitignore  README.md  pyproject.toml
py2gb/: __init__.py  __main__.py  blender_export.py
py2gba/: __init__.py  __main__.py  blender_export.py  gbc_control.py  pygame_api.py
