[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "py2gba"
version = "0.0.1"
description = "Placeholder CLI: Python to GBA/GBC assembly entrypoints"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["py2gba*"]

[project.scripts]
py2gba = "py2gba.__main__:main"